# rpipr

./: .gitignore  Cargo.toml  README.md
api/: schema.json  testquery.graphql
src/: constants.rs  main.rs  prcalc.rs  query.rs
src/ui/: mod.rs
src/ui/source/: base_window.ui  main_menu.ui  rpipr_ui_prj.cmb
src/ui/wrappers/: base_window.rs  main_menu.rs  mod.rs
